[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/Ball1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Ball2.png" type="Texture" id=2]
[ext_resource path="res://sprites/timer.png" type="Texture" id=3]
[ext_resource path="res://fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/CenterBall.gd" type="Script" id=5]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/phaseJump4.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 44.9751

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )
ball = ExtResource( 6 )

[node name="CenterBall" type="Node2D" parent="."]
position = Vector2( 360, 640 )

[node name="RedBall" type="Sprite" parent="CenterBall"]
position = Vector2( -52, 0 )
texture = ExtResource( 1 )

[node name="BlueBall" type="Sprite" parent="CenterBall"]
position = Vector2( 52, 0 )
texture = ExtResource( 2 )

[node name="RedArea" type="Area2D" parent="CenterBall"]

[node name="RedBallCollision" type="CollisionShape2D" parent="CenterBall/RedArea"]
position = Vector2( -52.3332, 6.10352e-05 )
shape = SubResource( 1 )

[node name="BlueArea" type="Area2D" parent="CenterBall"]

[node name="BlueBallCollision" type="CollisionShape2D" parent="CenterBall/BlueArea"]
position = Vector2( 50.7503, 0.170288 )
shape = SubResource( 1 )

[node name="Bottom_Pos" type="Position2D" parent="."]
position = Vector2( 360, 1130 )

[node name="Top_Pos" type="Position2D" parent="."]
position = Vector2( 360, 150 )

[node name="Timer" type="Sprite" parent="."]
position = Vector2( -326.173, -116.361 )
scale = Vector2( 10, 1 )
texture = ExtResource( 3 )

[node name="ScoreValue" type="RichTextLabel" parent="."]
margin_left = 22.6038
margin_top = 2.0
margin_right = 420.604
margin_bottom = 78.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.156863, 0.117647, 0.117647, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollideSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="area_entered" from="CenterBall/RedArea" to="." method="_on_RedArea_area_entered"]
[connection signal="area_entered" from="CenterBall/BlueArea" to="." method="_on_BlueArea_area_entered"]
